Fixes navbar alignment

--- a/themes/ocean-night/static/css/style.css
+++ b/themes/ocean-night/static/css/style.css
@@ -1,7 +1,7 @@
 /*********
  * Reset *
  *********/
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,a,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,figure,footer,header,hgroup,nav,section,menu,time,mark,audio,video,canvas {
+* {
     margin: 0;
     padding: 0;
     border: 0;
@@ -12,20 +12,36 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,a,blockquote,pre,abbr,addre
  **********/
 header {
     background-color: #1E2327;
-    padding-top: 12px;
-    padding-bottom: 12px;
-
+    padding-top: 0.750em;
+    padding-bottom: 0.750em;
+    width: 100%;
 }
 
 #navbar {
-    margin: 0% 20%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
 #navbar-logo {
     color: #C4E5FF;
+    font-size: 2.500em;
     text-decoration: none;
 }
 
-#navbar-link {
-    padding: 
+#navbar ul {
+    list-style-type: none;
+}
+
+#navbar li {
+    display: inline-block;
+}
+
+#navbar li a {
+    color: #C4E5FF;
+    font-size: 1.500em;
+    padding: 0.000em;
+    text-decoration: none;
 }
